--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
 
-<body>
-    
-
-    <script src="../../dist/assets/ts/home.js"></script>
-</body>
-
+  <body></body>
 </html>
