--- a/src/html/album.html
+++ b/src/html/album.html
@@ -8,6 +8,6 @@
   <body>
     <div id="container"></div>
 
-    <script type="module" src="../../dist/assets/ts/albumPage.js"></script>
+    <script type="module" src="../../dist/ts/albumPage.js"></script>
   </body>
 </html>
