Feat: created intefaces

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,5 +6,9 @@
     <title>Home</title>
   </head>
 
-  <body></body>
+  <body>
+    <div id="playlistDiv"></div>
+
+    <script type="module" src="../ts/homePage.ts"></script>
+  </body>
 </html>
