--- a/src/html/playlist.html
+++ b/src/html/playlist.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Playlist</title>
   </head>
-
   <body>
-    <div id="playlistDiv"></div>
-
-    <script type="module" src="../../dist/ts/homePage.js"></script>
+    <h1>Pagina Playlist</h1>
   </body>
 </html>
