--- a/src/html/playlist.html
+++ b/src/html/playlist.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Playlist</title>
-  </head>
-  <body>
-    <h1>Pagina Playlist</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Playlist</title>
+</head>
+
+<body>
+  <h1>Pagina Playlist</h1>
+
+  <div id="playlistTracks">
+
+  </div>
+
+  <script type="module" src="../../dist/ts/playlistPage.js"></script>
+</body>
+
 </html>
