Refactor: refactored project structure

--- a/playlist.html
+++ b/playlist.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Albums</title>
+    <title>Playlist</title>
   </head>
-  <body>
-    <div id="container"></div>
 
-    <script type="module" src="../../dist/ts/albumPage.js"></script>
+  <body>
+    <h1>Pagina Playlist</h1>
+
+    <div id="playlistTracks"></div>
+
+    <script type="module" src="./dist/ts/playlistPage.js"></script>
   </body>
 </html>
