--- a/album.html
+++ b/album.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Albums</title>
   </head>
-
   <body>
-    <div id="playlistDiv"></div>
+    <div id="container"></div>
 
-    <script type="module" src="../../dist/ts/homePage.js"></script>
+    <script type="module" src="./dist/ts/albumPage.js"></script>
   </body>
 </html>
