--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../assets/css/style.css" />
   <title>Home</title>
 </head>
 
@@ -23,17 +25,17 @@
         </div>
         <div class="second-container-left-section mt-2">
           <div class="header-second-container-left-section">
-            <nav class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-2">
+            <nav class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4">
               <ul class="navbar-nav">
                 <li><a href="#" class="text-decoration-none text-white"><i class="me-2">B</i>La tua libreria</a></li>
               </ul>
-              <ul class="navbar-nav">
+              <ul class="navbar-nav px-4">
                 <li><a href="#" class="me-2 text-decoration-none text-white">C</a></li>
                 <li><a href="#" class="me-2 text-decoration-none text-white">M</a></li>
               </ul>
             </nav>
-            <nav class="navbar navbar-expand navbar-light bg-dark text-white">
-              <ul class="navbar-nav p-2">
+            <nav class="navbar navbar-expand navbar-light bg-dark text-white px-4">
+              <ul class="navbar-nav nav-librerie">
                 <li><a href="#" class="me-2 text-decoration-none text-white btn bg-secondary rounded-pill">Playlist</a>
                 </li>
                 <li><a href="#" class="me-2 text-decoration-none text-white btn bg-secondary rounded-pill">Podcast e
@@ -44,10 +46,68 @@
                 </li>
               </ul>
             </nav>
-            <div class="body-second-container-left-section bg-dark">
+            <div class="body-second-container-left-section bg-dark px-4 pb-4">
               <div class="navbar-body-second-container d-flex justify-content-between p-2">
-                <a href="#" class="text-decoration-none text-white"><i>S</i></a>
+                <a href="#" class="text-decoration-none text-white"><i class="bi bi-search"></i></a>
                 <a href="#" class="text-decoration-none text-white">Recenti<i class="ms-2">E</i></a>
+              </div>
+              <div id="side-playlist-list" class="text-danger">
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
+                <div class="side-single-playlist d-flex">
+                  <div class="img-side-single-playlist border border-1 border-danger">Immagine</div>
+                  <div class="ps-2">
+                    <p class="mb-0">Nome playlist</p>
+                    <p class="mt-0">Dettagli playlist</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -55,8 +115,8 @@
 
         </div>
       </div>
-      <div class="col-8 right-section">
-        <div class="header-right-section bg-dark">
+      <div class="col-8" id="right-section">
+        <div id="header-right-section" class="bg-dark position-sticky top-0">
           <nav class="navbar navbar-expand-lg navbar-light text-white">
             <div class="container-fluid">
               <div class="row w-100 d-flex justify-content-between">
@@ -77,10 +137,10 @@
           </nav>
 
         </div>
-        <div class="body-right-section bg-dark text-white mt-2">
+        <div class="body-right-section bg-dark text-white mt-2 p-4">
           <div class="hero d-flex position-relative">
-            <div class="img-hero p-2 text-danger border border-1 border-danger">Immagine</div>
-            <div class="content-hero p-2">
+            <div id="img-playlist-hero" class="p-2 text-danger border border-1 border-danger">Immagine</div>
+            <div class="content-hero ps-2">
               <p>Playlist</p>
               <h2 class="text-danger playlist-name display-4 fw-bold">Nome playlist</h2>
               <p class="text-danger playlist-description">Descrizione playlist Descrizione playlist Descrizione playlist
@@ -89,8 +149,8 @@
               <button class="btn bg-transparent text-white border border-1 border-white px-4 py-2 rounded-pill"
                 type="submit">Segui</button>
               <button class="btn bg-transparent text-white px-4 py-2 rounded-pill me-2" type="submit">...</button>
-              <button class="btn bg-transparent text-white px-4 py-2 rounded-pill me-2 position-absolute top-0 end-0"
-                type="submit">Sponsorizzato</button>
+              <a class="text-white text-decoration-none py-2 rounded-pill me-2 position-absolute top-0 end-0"
+                type="submit">Sponsorizzato</a>
             </div>
 
           </div>
@@ -149,9 +209,150 @@
 
           </div>
 
-          <div class="first-row-big-playlists">
-            <div class="big-playlist-single-container text-danger">
-              <div class="border border-1 border-danger">Immagine</div>
+          <div class="first-row-big-playlists text-danger row">
+            <div class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center">
+              <p class="h3 text-white">Creato per <span class="text-danger">UtenteX</span></p>
+              <a href="#" class="text-white text-decoration-none">Mostra tutto</a>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="second-row-big-playlists text-danger row">
+            <div class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center">
+              <p class="h3 text-white">I tuoi mix preferiti</p>
+              <a href="#" class="text-white text-decoration-none">Mostra tutto</a>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="second-row-big-playlists text-danger row">
+            <div class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center">
+              <p class="h3 text-white">Ascoltate di recente</p>
+              <a href="#" class="text-white text-decoration-none">Mostra tutto</a>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <div class="border border-1 border-danger img-playlist-medium">Immagine</div>
+                <p class="mb-0">Nome playlist</p>
+                <p class="mt-0">Artisti playlist</p>
+              </div>
             </div>
           </div>
 
