Feat: implemented ARtistOverview interface

--- a/artists.html
+++ b/artists.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Pagina artists</h1>
+    <div id="header"></div>
+    <div id="artistSection"></div>
+
+    <script type="module" src="./dist/ts/artistPage.js"></script>
   </body>
 </html>
