Feat: implemented player

--- a/artists.html
+++ b/artists.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div id="header"></div>
-    <div id="artistSection"></div>
+    <div id="popularTracks"></div>
+    <div id="discography"></div>
+    <div id="relatedArtists"></div>
 
     <script type="module" src="./dist/ts/artistPage.js"></script>
   </body>
