Refactor: refactored some code

--- a/artists.html
+++ b/artists.html
@@ -11,6 +11,18 @@
     <div id="discography"></div>
     <div id="relatedArtists"></div>
 
+    <div id="audioPlayer">
+      <img
+        id="currentTrackImage"
+        src=""
+        alt="Track image"
+        style="width: 100px; height: 100px"
+      />
+      <audio id="audioElement" controls>
+        Il tuo browser non supporta l'elemento audio.
+      </audio>
+    </div>
+
     <script type="module" src="./dist/ts/artistPage.js"></script>
   </body>
 </html>
