--- a/album.html
+++ b/album.html
@@ -8,6 +8,18 @@
   <body>
     <div id="container"></div>
 
+    <div id="audioPlayer">
+      <img
+        id="currentTrackImage"
+        src=""
+        alt="Track image"
+        style="width: 100px; height: 100px"
+      />
+      <audio id="audioElement" controls>
+        Il tuo browser non supporta l'elemento audio.
+      </audio>
+    </div>
+
     <script type="module" src="./dist/ts/albumPage.js"></script>
   </body>
 </html>
