update: index.html improvements

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -141,7 +141,7 @@
           <div class="hero d-flex position-relative">
             <div id="img-playlist-hero" class="p-2 text-danger border border-1 border-danger">Immagine</div>
             <div class="content-hero ps-2">
-              <p>Playlist</p>
+              <p class="mb-0">Playlist</p>
               <h2 class="text-danger playlist-name display-4 fw-bold">Nome playlist</h2>
               <p class="text-danger playlist-description">Descrizione playlist Descrizione playlist Descrizione playlist
                 Descrizione playlist Descrizione playlist Descrizione playlist</p>
