Feat: implemented search function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <input type="text" placeholder="Cerca qualcosa" id="search" />
+    <button type="button" id="searchBtn">Cerca</button>
+
     <div class="container">
       <div class="row">
         <h2>Per te</h2>
