--- a/searchPage.html
+++ b/searchPage.html
@@ -7,8 +7,16 @@
   </head>
   <body>
     <div id="topResult"></div>
-    <div id="trackResults"></div>
-    <div id="playlistResults"></div>
-    <div id="artistResults"></div>
+    <div id="trackResults">
+      <h2>Top Brani</h2>
+    </div>
+    <div id="playlistResults">
+      <h2>Con Artista</h2>
+    </div>
+    <div id="artistResults">
+      <h2>Artisti Correlati</h2>
+    </div>
+
+    <script type="module" src="./dist/ts/searchPage.js"></script>
   </body>
 </html>
