--- a/playlist.html
+++ b/playlist.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Playlist</title>
-  </head>
+<html lang="it">
 
-  <body>
-    <div id="playlistDesc"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="./src/assets/css/style.css" />
+  <title>Playlist</title>
+</head>
 
-    <div id="playlistTracks"></div>
+<body>
+  <div id="playlistDesc"></div>
 
-    <div id="audioPlayer">
-      <img
-        id="currentTrackImage"
-        src=""
-        alt="Track image"
-        style="width: 100px; height: 100px"
-      />
-      <audio id="audioElement" controls>
-        Il tuo browser non supporta l'elemento audio.
-      </audio>
-    </div>
+  <div id="playlistTracks"></div>
 
-    <script type="module" src="./dist/ts/playlistPage.js"></script>
-  </body>
+  <div id="audioPlayer">
+    <img id="currentTrackImage" src="" alt="Track image" style="width: 100px; height: 100px" />
+    <audio id="audioElement" controls>
+      Il tuo browser non supporta l'elemento audio.
+    </audio>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script type="module" src="./dist/ts/playlistPage.js"></script>
+</body>
+
 </html>
