Refactor: refactored some code

--- a/index.html
+++ b/index.html
@@ -462,9 +462,7 @@
               <div
                 class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center"
               >
-                <p class="h3 text-white">
-                  Creato per <span class="dynamic-content">UtenteX</span>
-                </p>
+                <p class="h3 text-white">Creato per Te</p>
                 <a href="#" class="text-white text-decoration-none"
                   >Mostra tutto</a
                 >
