Refactor: refactored some code

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
                   >
                 </li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white fw-bold">
-                    <i class="me-3 fs-4 bi bi-search"></i>
-                    <input
-                      type="text"
-                      id="searchQuery"
-                      placeholder="Cerca"
-                      class="btn-dark border-0"
-                  /></a>
+                  <i class="me-3 fs-4 bi bi-search"></i>
+                  <input
+                    type="text"
+                    id="search"
+                    placeholder="Cerca"
+                    class="btn-dark border-0"
+                  />
+                  <button type="button" class="btn-outline-dark" id="searchBtn">
+                    Cerca
+                  </button>
                 </li>
               </ul>
             </nav>
@@ -591,32 +593,11 @@
               <div
                 class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center"
               >
-                <p class="h3 text-white">
-                  Creato per <span class="dynamic-content">UtenteX</span>
-                </p>
+                <p class="h3 text-white">Creato per te</p>
                 <a href="#" class="text-white text-decoration-none"
                   >Mostra tutto</a
                 >
               </div>
-              <!-- <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div> -->
             </div>
 
             <div
@@ -631,120 +612,6 @@
                   >Mostra tutto</a
                 >
               </div>
-              <!-- <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div> -->
             </div>
 
             <div
@@ -759,120 +626,6 @@
                   >Mostra tutto</a
                 >
               </div>
-              <!-- <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-6">
-                <div class="big-playlist-single-container">
-                  <a
-                    href="#"
-                    class="img-playlist-medium d-block dynamic-content text-decoration-none"
-                    >Immagine</a
-                  >
-                  <p class="mb-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Nome playlist</a
-                    >
-                  </p>
-                  <p class="mt-0">
-                    <a class="dynamic-content text-decoration-none" href="#"
-                      >Artisti playlist</a
-                    >
-                  </p>
-                </div>
-              </div> -->
             </div>
           </div>
         </div>
