--- a/playlist.html
+++ b/playlist.html
@@ -261,7 +261,7 @@
             </div>
           </nav>
         </div>
-        <div class="body-right-section bg-dark text-white mt-2 p-4">
+        <div class="body-right-section bg-dark text-white mt-2 p-4" id="body-right">
           <div class="hero d-flex position-relative" id="playlistTitle">
             <a href="#" id="img-playlist-hero" class="p-2"></a>
             <div class="content-hero ps-2">
@@ -308,10 +308,9 @@
             <div class="col-5">Titolo brano</div>
             <div class="col-5">Titolo Album</div>
             <div class="col"><i class="bi bi-clock"></i></div>
-
           </div>
 
-          <div class="row row-single-tracks d-flex align-items-center">
+          <!-- <div class="row row-single-tracks d-flex align-items-center">
             <div class="col">1</div>
             <div class="col-5 d-flex">
               <div>
@@ -330,7 +329,7 @@
             </div>
             <div class="col-5"><a href="#" class="text-white text-decoration-none">Album #1</a></div>
             <div class="col">4:00</div>
-          </div>
+          </div> -->
 
           <!-- <div class="side-single-playlist d-flex mb-2">
             
@@ -355,10 +354,12 @@
       class="row player-section text-white position-absolute w-100 bottom-0 text-center align-items-center p-2 px-4">
       <div class="col-3">
         <div class="dettagli-brano d-flex align-items-center">
-          <a class="img-preview-player dynamic-content text-decoration-none me-2" href="#">Immagine</a>
+          <a class="img-preview-player dynamic-content text-decoration-none me-2" href="#">
+            <img src="" alt="" id="currentTrackImage" class="img-fluid">
+          </a>
           <div class="details-preview-player dynamic-content">
-            <p class="my-0 text-start">Nome brano</p>
-            <p class="my-0">Nome artista</p>
+            <p class="my-0 text-start" id="playerTrackName">Nome brano</p>
+            <p class="my-0" id="playerArtistName">Nome artista</p>
           </div>
           <div class="icon-preview-player">
             <i class="bi bi-check-circle-fill ms-4"></i>
@@ -366,7 +367,7 @@
         </div>
       </div>
       <div class="col">
-        <audio controls>
+        <audio controls id="audioElement">
           <source src="" />
           Your browser does not support the audio element.
         </audio>
@@ -381,7 +382,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
   <script type="module" src="./dist/ts/playlistPage.js"></script>
 </body>
 
