--- a/playlist.html
+++ b/playlist.html
@@ -273,6 +273,7 @@
                 Descrizione playlist Descrizione playlist Descrizione playlist
                 Descrizione playlist Descrizione playlist Descrizione playlist
               </p>
+              <p id="totalTracks"></p>
               <button class="btn bg-success rounded-pill me-2 px-4 py-2" id="playBtn" type="submit">
                 Play
               </button>
@@ -310,42 +311,6 @@
             <div class="col"><i class="bi bi-clock"></i></div>
           </div>
 
-          <!-- <div class="row row-single-tracks d-flex align-items-center">
-            <div class="col">1</div>
-            <div class="col-5 d-flex">
-              <div>
-                <a href="#" class="text-decoration-none me-2"><img
-                  src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg"
-                  class="img-fluid" /></a>
-              </div>
-              <div class="d-flex flex-column justify-content-center">
-                <p class="mb-0">
-                  <a href="#" class="text-decoration-none text-white">Emozioni</a>
-                </p>
-                <p class="my-0">
-                  <a href="#" class="text-decoration-none text-secondary">Artista</a>
-                </p>
-              </div>
-            </div>
-            <div class="col-5"><a href="#" class="text-white text-decoration-none">Album #1</a></div>
-            <div class="col">4:00</div>
-          </div> -->
-
-          <!-- <div class="side-single-playlist d-flex mb-2">
-            
-            <div class="ps-2 d-flex flex-column justify-content-center">
-              <p class="mb-0">
-                <a href="#" class="text-decoration-none text-white">Emozioni</a>
-              </p>
-              <p class="my-0">
-                <a href="#" class="text-decoration-none text-secondary">Playlist &middot; Spotify</a>
-              </p>
-            </div>
-          </div> -->
-
-
-
-          
 
         </div>
       </div>
