--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-4 left-section pe-0">
         <div class="first-container-left-section">
-          <nav class="navbar navbar-expand navbar-light bg-dark text-white p-4">
+          <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4">
             <ul class="navbar-nav d-flex flex-column">
               <li>
                 <a href="#" class="text-decoration-none text-white fw-bold"><i
@@ -24,7 +24,7 @@
               </li>
               <li>
                 <i class="me-3 fs-4 bi bi-search"></i>
-                <input type="text" id="search" placeholder="Cerca" class="btn-dark border-0" />
+                <input type="text" id="search" placeholder="Cerca" class="btn-dark border-0 greytext" />
                 <button type="button" class="btn-outline-dark" id="searchBtn">
                   Cerca
                 </button>
