--- a/playlist.html
+++ b/playlist.html
@@ -17,15 +17,15 @@
     <div class="row">
       <div class="col-4 left-section pe-0">
         <div class="first-container-left-section">
-          <nav class="navbar navbar-expand navbar-light bg-dark text-white p-4">
+          <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4">
             <ul class="navbar-nav d-flex flex-column">
               <li>
-                <a href="#" class="text-decoration-none text-white fw-bold"><i
+                <a href="#" class="text-decoration-none greytext"><i
                     class="me-4 fs-4 bi bi-house"></i>Home</a>
               </li>
               <li>
                 <i class="me-3 fs-4 bi bi-search"></i>
-                <input type="text" id="search" placeholder="Cerca" class="btn-dark border-0" />
+                <input type="text" id="search" placeholder="Cerca" class="btn-dark border-0 greytext" />
                 <button type="button" class="btn-outline-dark" id="searchBtn">
                   Cerca
                 </button>
