update: artists.html added cards

--- a/artists.html
+++ b/artists.html
@@ -310,12 +310,12 @@
             <div class="col">4:00</div>
           </div>
 
-          <div class="row-disc-title row">
+          <div class="row" id="row-disc-title">
             <div class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center">
               <p class="h3 text-white">Discografia</p>
               <a href="#" class="text-white text-decoration-none">Mostra tutto</a>
             </div>
-            <div class="col-12">
+            <div class="col-12 mb-3">
               <button class="rounded-pill border border-0 py-2 px-3 me-2">Uscite popolari</button>
               <button class="rounded-pill border py-2 px-3 btn-dark border border-1 border-white me-2">Album</button>
               <button class="rounded-pill border py-2 px-3 btn-dark border border-1 border-white">Singoli ed EP</button>
@@ -323,14 +323,83 @@
             </div>
           </div>
 
-          <div class="row-correlated-title row">
+          
+          <div class="row" id="row-disc-cards">
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <a class="img-playlist-medium d-block dynamic-content text-decoration-none" href="#"><img class="img-fluid" src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg"></a>
+                <p class="mb-0 mt-1">Titolo album</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <a class="img-playlist-medium d-block dynamic-content text-decoration-none" href="#"><img class="img-fluid" src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg"></a>
+                <p class="mb-0 mt-1">Titolo album</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <a class="img-playlist-medium d-block dynamic-content text-decoration-none" href="#"><img class="img-fluid" src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg"></a>
+                <p class="mb-0 mt-1">Titolo album</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="big-playlist-single-container">
+                <a class="img-playlist-medium d-block dynamic-content text-decoration-none" href="#"><img class="img-fluid" src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg"></a>
+                <p class="mb-0 mt-1">Titolo album</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="row-correlated-title" class="row">
             <div class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center">
               <p class="h3 text-white">Artisti correlati</p>
               <a href="#" class="text-white text-decoration-none">Mostra tutto</a>
             </div>
           </div>
+          <div id="row-correlated-cards" class="row">
+            <div class="col-3">
+            <div class="correlated-artist-img">
+              <img src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg" class="img-fluid rounded-circle"/>
 
-          <div class="row-info-artist row mb-5">
+            </div>
+          <div class="artist-name p-3">
+            <p class="mb-0">Jim Morrison</p>
+            <p class="mt-0 text-secondary">Artista</p>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="correlated-artist-img">
+              <img src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg" class="img-fluid rounded-circle"/>
+
+            </div>
+          <div class="artist-name p-3">
+            <p class="mb-0">Jim Morrison</p>
+            <p class="mt-0 text-secondary">Artista</p>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="correlated-artist-img">
+              <img src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg" class="img-fluid rounded-circle"/>
+
+            </div>
+          <div class="artist-name p-3">
+            <p class="mb-0">Jim Morrison</p>
+            <p class="mt-0 text-secondary">Artista</p>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="correlated-artist-img">
+              <img src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg" class="img-fluid rounded-circle"/>
+
+            </div>
+          <div class="artist-name p-3">
+            <p class="mb-0">Jim Morrison</p>
+            <p class="mt-0 text-secondary">Artista</p>
+            </div>
+          </div>
+          </div>
+          <div id="row-info-artist row mb-5">
             <div class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center">
               <p class="h3 text-white">Informazioni</p>
             </div>
