--- a/playlist.html
+++ b/playlist.html
@@ -20,7 +20,7 @@
           <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4">
             <ul class="navbar-nav d-flex flex-column">
               <li>
-                <a href="#" class="text-decoration-none greytext"><i
+                <a href="./index.html" class="text-decoration-none greytext"><i
                     class="me-4 fs-4 bi bi-house"></i>Home</a>
               </li>
               <li>
